[package]
name = "nsvg"
version = "0.3.2"
authors = ["Nick Browne <nickbrowne@users.noreply.github.com>"]
repository = "https://github.com/nickbrowne/nsvg"
keywords = ["svg", "nanosvg"]
description = "A simple SVG parser and rasterizer using NanoSVG"
license = "Zlib/MIT"
readme = "README.md"

[dependencies]
image = "0.18.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = { version = "0.26.3", optional = true }
cc = "1.0"

[badges]
travis-ci = { repository = "nickbrowne/nsvg", branch = "master" }
