[package]
name = "nsvg"
version = "0.5.1"
authors = ["Nick Browne <nickbrowne@users.noreply.github.com>"]
repository = "https://github.com/nickbrowne/nsvg"
keywords = ["svg", "nanosvg"]
description = "A simple SVG parser and rasterizer using NanoSVG"
license = "Zlib/MIT"
readme = "README.md"

[features]
default = ["image"]

[dependencies]
image = { version = "0.19.0", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = { version = "0.26.3", optional = true }
cc = "1.0"

[badges]
travis-ci = { repository = "nickbrowne/nsvg", branch = "master" }
appveyor = { repository = "nickbrowne/nsvg", branch = "master" }
